# pkg/gen/api/gophkeeper/v1/user_service.pb.go
@@ -242,14 +242,14 @@ func (x *LoginUserResponse) GetJwt() string {
 	return ""
 }
 
-type SyncUserDataRequest struct {
+type GetAllUserDataFromDBRequest struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 }
 
-func (x *SyncUserDataRequest) Reset() {
-	*x = SyncUserDataRequest{}
+func (x *GetAllUserDataFromDBRequest) Reset() {
+	*x = GetAllUserDataFromDBRequest{}
 	if protoimpl.UnsafeEnabled {
 		mi := &file_api_gophkeeper_v1_user_service_proto_msgTypes[4]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -257,13 +257,13 @@ func (x *SyncUserDataRequest) Reset() {
 	}
 }
 
-func (x *SyncUserDataRequest) String() string {
+func (x *GetAllUserDataFromDBRequest) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*SyncUserDataRequest) ProtoMessage() {}
+func (*GetAllUserDataFromDBRequest) ProtoMessage() {}
 
-func (x *SyncUserDataRequest) ProtoReflect() protoreflect.Message {
+func (x *GetAllUserDataFromDBRequest) ProtoReflect() protoreflect.Message {
 	mi := &file_api_gophkeeper_v1_user_service_proto_msgTypes[4]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -275,12 +275,12 @@ func (x *SyncUserDataRequest) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use SyncUserDataRequest.ProtoReflect.Descriptor instead.
-func (*SyncUserDataRequest) Descriptor() ([]byte, []int) {
+// Deprecated: Use GetAllUserDataFromDBRequest.ProtoReflect.Descriptor instead.
+func (*GetAllUserDataFromDBRequest) Descriptor() ([]byte, []int) {
 	return file_api_gophkeeper_v1_user_service_proto_rawDescGZIP(), []int{4}
 }
 
-type SyncUserDataResponse struct {
+type GetAllUserDataFromDBResponse struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
@@ -291,8 +291,8 @@ type SyncUserDataResponse struct {
 	Cards     []*Card     `protobuf:"bytes,4,rep,name=cards,proto3" json:"cards,omitempty"`
 }
 
-func (x *SyncUserDataResponse) Reset() {
-	*x = SyncUserDataResponse{}
+func (x *GetAllUserDataFromDBResponse) Reset() {
+	*x = GetAllUserDataFromDBResponse{}
 	if protoimpl.UnsafeEnabled {
 		mi := &file_api_gophkeeper_v1_user_service_proto_msgTypes[5]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -300,13 +300,13 @@ func (x *SyncUserDataResponse) Reset() {
 	}
 }
 
-func (x *SyncUserDataResponse) String() string {
+func (x *GetAllUserDataFromDBResponse) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*SyncUserDataResponse) ProtoMessage() {}
+func (*GetAllUserDataFromDBResponse) ProtoMessage() {}
 
-func (x *SyncUserDataResponse) ProtoReflect() protoreflect.Message {
+func (x *GetAllUserDataFromDBResponse) ProtoReflect() protoreflect.Message {
 	mi := &file_api_gophkeeper_v1_user_service_proto_msgTypes[5]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -318,33 +318,33 @@ func (x *SyncUserDataResponse) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use SyncUserDataResponse.ProtoReflect.Descriptor instead.
-func (*SyncUserDataResponse) Descriptor() ([]byte, []int) {
+// Deprecated: Use GetAllUserDataFromDBResponse.ProtoReflect.Descriptor instead.
+func (*GetAllUserDataFromDBResponse) Descriptor() ([]byte, []int) {
 	return file_api_gophkeeper_v1_user_service_proto_rawDescGZIP(), []int{5}
 }
 
-func (x *SyncUserDataResponse) GetPasswords() []*Password {
+func (x *GetAllUserDataFromDBResponse) GetPasswords() []*Password {
 	if x != nil {
 		return x.Passwords
 	}
 	return nil
 }
 
-func (x *SyncUserDataResponse) GetTexts() []*Text {
+func (x *GetAllUserDataFromDBResponse) GetTexts() []*Text {
 	if x != nil {
 		return x.Texts
 	}
 	return nil
 }
 
-func (x *SyncUserDataResponse) GetBinaries() []*Binary {
+func (x *GetAllUserDataFromDBResponse) GetBinaries() []*Binary {
 	if x != nil {
 		return x.Binaries
 	}
 	return nil
 }
 
-func (x *SyncUserDataResponse) GetCards() []*Card {
+func (x *GetAllUserDataFromDBResponse) GetCards() []*Card {
 	if x != nil {
 		return x.Cards
 	}
@@ -562,10 +562,11 @@ var file_api_gophkeeper_v1_user_service_proto_rawDesc = []byte{
 	0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
 	0x65, 0x12, 0x16, 0x0a, 0x06, 0x75, 0x73, 0x65, 0x72, 0x49, 0x44, 0x18, 0x01, 0x20, 0x01, 0x28,
 	0x09, 0x52, 0x06, 0x75, 0x73, 0x65, 0x72, 0x49, 0x44, 0x12, 0x10, 0x0a, 0x03, 0x6a, 0x77, 0x74,
-	0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6a, 0x77, 0x74, 0x22, 0x15, 0x0a, 0x13, 0x53,
-	0x79, 0x6e, 0x63, 0x55, 0x73, 0x65, 0x72, 0x44, 0x61, 0x74, 0x61, 0x52, 0x65, 0x71, 0x75, 0x65,
-	0x73, 0x74, 0x22, 0xb6, 0x01, 0x0a, 0x14, 0x53, 0x79, 0x6e, 0x63, 0x55, 0x73, 0x65, 0x72, 0x44,
-	0x61, 0x74, 0x61, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2d, 0x0a, 0x09, 0x70,
+	0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6a, 0x77, 0x74, 0x22, 0x1d, 0x0a, 0x1b, 0x47,
+	0x65, 0x74, 0x41, 0x6c, 0x6c, 0x55, 0x73, 0x65, 0x72, 0x44, 0x61, 0x74, 0x61, 0x46, 0x72, 0x6f,
+	0x6d, 0x44, 0x42, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0xbe, 0x01, 0x0a, 0x1c, 0x47,
+	0x65, 0x74, 0x41, 0x6c, 0x6c, 0x55, 0x73, 0x65, 0x72, 0x44, 0x61, 0x74, 0x61, 0x46, 0x72, 0x6f,
+	0x6d, 0x44, 0x42, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2d, 0x0a, 0x09, 0x70,
 	0x61, 0x73, 0x73, 0x77, 0x6f, 0x72, 0x64, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x0f,
 	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x50, 0x61, 0x73, 0x73, 0x77, 0x6f, 0x72, 0x64, 0x52,
 	0x09, 0x70, 0x61, 0x73, 0x73, 0x77, 0x6f, 0x72, 0x64, 0x73, 0x12, 0x21, 0x0a, 0x05, 0x74, 0x65,
@@ -584,7 +585,7 @@ var file_api_gophkeeper_v1_user_service_proto_rawDesc = []byte{
 	0x07, 0x76, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x07,
 	0x76, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x22, 0x06, 0x0a, 0x04, 0x54, 0x65, 0x78, 0x74, 0x22,
 	0x08, 0x0a, 0x06, 0x42, 0x69, 0x6e, 0x61, 0x72, 0x79, 0x22, 0x06, 0x0a, 0x04, 0x43, 0x61, 0x72,
-	0x64, 0x32, 0xdf, 0x01, 0x0a, 0x0b, 0x55, 0x73, 0x65, 0x72, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x64, 0x32, 0xf7, 0x01, 0x0a, 0x0b, 0x55, 0x73, 0x65, 0x72, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63,
 	0x65, 0x12, 0x47, 0x0a, 0x0c, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x55, 0x73, 0x65,
 	0x72, 0x12, 0x1a, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74,
 	0x65, 0x72, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1b, 0x2e,
@@ -593,17 +594,18 @@ var file_api_gophkeeper_v1_user_service_proto_rawDesc = []byte{
 	0x67, 0x69, 0x6e, 0x55, 0x73, 0x65, 0x72, 0x12, 0x17, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e,
 	0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
 	0x1a, 0x18, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x55, 0x73,
-	0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x47, 0x0a, 0x0c, 0x53, 0x79,
-	0x6e, 0x63, 0x55, 0x73, 0x65, 0x72, 0x44, 0x61, 0x74, 0x61, 0x12, 0x1a, 0x2e, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x2e, 0x53, 0x79, 0x6e, 0x63, 0x55, 0x73, 0x65, 0x72, 0x44, 0x61, 0x74, 0x61, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1b, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x53,
-	0x79, 0x6e, 0x63, 0x55, 0x73, 0x65, 0x72, 0x44, 0x61, 0x74, 0x61, 0x52, 0x65, 0x73, 0x70, 0x6f,
-	0x6e, 0x73, 0x65, 0x42, 0x46, 0x5a, 0x44, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
-	0x6d, 0x2f, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x6f, 0x6e, 0x69, 0x65, 0x73, 0x2f, 0x79, 0x61, 0x2d,
-	0x67, 0x6f, 0x70, 0x68, 0x6b, 0x65, 0x65, 0x70, 0x65, 0x72, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x67,
-	0x65, 0x6e, 0x2f, 0x67, 0x6f, 0x70, 0x68, 0x6b, 0x65, 0x65, 0x70, 0x65, 0x72, 0x2f, 0x76, 0x31,
-	0x3b, 0x67, 0x6f, 0x70, 0x68, 0x6b, 0x65, 0x65, 0x70, 0x65, 0x72, 0x62, 0x06, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x33,
+	0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x5f, 0x0a, 0x14, 0x47, 0x65,
+	0x74, 0x41, 0x6c, 0x6c, 0x55, 0x73, 0x65, 0x72, 0x44, 0x61, 0x74, 0x61, 0x46, 0x72, 0x6f, 0x6d,
+	0x44, 0x42, 0x12, 0x22, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x47, 0x65, 0x74, 0x41, 0x6c,
+	0x6c, 0x55, 0x73, 0x65, 0x72, 0x44, 0x61, 0x74, 0x61, 0x46, 0x72, 0x6f, 0x6d, 0x44, 0x42, 0x52,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2e, 0x47,
+	0x65, 0x74, 0x41, 0x6c, 0x6c, 0x55, 0x73, 0x65, 0x72, 0x44, 0x61, 0x74, 0x61, 0x46, 0x72, 0x6f,
+	0x6d, 0x44, 0x42, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x42, 0x46, 0x5a, 0x44, 0x67,
+	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x6f,
+	0x6e, 0x69, 0x65, 0x73, 0x2f, 0x79, 0x61, 0x2d, 0x67, 0x6f, 0x70, 0x68, 0x6b, 0x65, 0x65, 0x70,
+	0x65, 0x72, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x67, 0x6f, 0x70, 0x68, 0x6b,
+	0x65, 0x65, 0x70, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x3b, 0x67, 0x6f, 0x70, 0x68, 0x6b, 0x65, 0x65,
+	0x70, 0x65, 0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -620,28 +622,28 @@ func file_api_gophkeeper_v1_user_service_proto_rawDescGZIP() []byte {
 
 var file_api_gophkeeper_v1_user_service_proto_msgTypes = make([]protoimpl.MessageInfo, 10)
 var file_api_gophkeeper_v1_user_service_proto_goTypes = []interface{}{
-	(*RegisterUserRequest)(nil),  // 0: proto.RegisterUserRequest
-	(*RegisterUserResponse)(nil), // 1: proto.RegisterUserResponse
-	(*LoginUserRequest)(nil),     // 2: proto.LoginUserRequest
-	(*LoginUserResponse)(nil),    // 3: proto.LoginUserResponse
-	(*SyncUserDataRequest)(nil),  // 4: proto.SyncUserDataRequest
-	(*SyncUserDataResponse)(nil), // 5: proto.SyncUserDataResponse
-	(*Password)(nil),             // 6: proto.Password
-	(*Text)(nil),                 // 7: proto.Text
-	(*Binary)(nil),               // 8: proto.Binary
-	(*Card)(nil),                 // 9: proto.Card
+	(*RegisterUserRequest)(nil),          // 0: proto.RegisterUserRequest
+	(*RegisterUserResponse)(nil),         // 1: proto.RegisterUserResponse
+	(*LoginUserRequest)(nil),             // 2: proto.LoginUserRequest
+	(*LoginUserResponse)(nil),            // 3: proto.LoginUserResponse
+	(*GetAllUserDataFromDBRequest)(nil),  // 4: proto.GetAllUserDataFromDBRequest
+	(*GetAllUserDataFromDBResponse)(nil), // 5: proto.GetAllUserDataFromDBResponse
+	(*Password)(nil),                     // 6: proto.Password
+	(*Text)(nil),                         // 7: proto.Text
+	(*Binary)(nil),                       // 8: proto.Binary
+	(*Card)(nil),                         // 9: proto.Card
 }
 var file_api_gophkeeper_v1_user_service_proto_depIdxs = []int32{
-	6, // 0: proto.SyncUserDataResponse.passwords:type_name -> proto.Password
-	7, // 1: proto.SyncUserDataResponse.texts:type_name -> proto.Text
-	8, // 2: proto.SyncUserDataResponse.binaries:type_name -> proto.Binary
-	9, // 3: proto.SyncUserDataResponse.cards:type_name -> proto.Card
+	6, // 0: proto.GetAllUserDataFromDBResponse.passwords:type_name -> proto.Password
+	7, // 1: proto.GetAllUserDataFromDBResponse.texts:type_name -> proto.Text
+	8, // 2: proto.GetAllUserDataFromDBResponse.binaries:type_name -> proto.Binary
+	9, // 3: proto.GetAllUserDataFromDBResponse.cards:type_name -> proto.Card
 	0, // 4: proto.UserService.RegisterUser:input_type -> proto.RegisterUserRequest
 	2, // 5: proto.UserService.LoginUser:input_type -> proto.LoginUserRequest
-	4, // 6: proto.UserService.SyncUserData:input_type -> proto.SyncUserDataRequest
+	4, // 6: proto.UserService.GetAllUserDataFromDB:input_type -> proto.GetAllUserDataFromDBRequest
 	1, // 7: proto.UserService.RegisterUser:output_type -> proto.RegisterUserResponse
 	3, // 8: proto.UserService.LoginUser:output_type -> proto.LoginUserResponse
-	5, // 9: proto.UserService.SyncUserData:output_type -> proto.SyncUserDataResponse
+	5, // 9: proto.UserService.GetAllUserDataFromDB:output_type -> proto.GetAllUserDataFromDBResponse
 	7, // [7:10] is the sub-list for method output_type
 	4, // [4:7] is the sub-list for method input_type
 	4, // [4:4] is the sub-list for extension type_name
@@ -704,7 +706,7 @@ func file_api_gophkeeper_v1_user_service_proto_init() {
 			}
 		}
 		file_api_gophkeeper_v1_user_service_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*SyncUserDataRequest); i {
+			switch v := v.(*GetAllUserDataFromDBRequest); i {
 			case 0:
 				return &v.state
 			case 1:
@@ -716,7 +718,7 @@ func file_api_gophkeeper_v1_user_service_proto_init() {
 			}
 		}
 		file_api_gophkeeper_v1_user_service_proto_msgTypes[5].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*SyncUserDataResponse); i {
+			switch v := v.(*GetAllUserDataFromDBResponse); i {
 			case 0:
 				return &v.state
 			case 1:
